# object-triggered-SLAM

./: .gitignore  LICENSE  README.md
ros2_ws/src/gazebo_turtlebot3/: CMakeLists.txt  package.xml
ros2_ws/src/gazebo_turtlebot3/launch/: robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  test_room.launch.py
ros2_ws/src/gazebo_turtlebot3/models/turtlebot3_waffle_pi/: model.sdf
ros2_ws/src/gazebo_turtlebot3/rviz_config/: lidar_detection.rviz
ros2_ws/src/gazebo_turtlebot3/worlds/: test_room.world
ros2_ws/src/lidar_detection/: CMakeLists.txt  package.xml
ros2_ws/src/lidar_detection/launch/: lidar_navigation.launch.py  world_only.launch.py
ros2_ws/src/lidar_detection/src/: lidar_cluster_publisher.cpp  object_goal_selector.cpp  send_goal_node.cpp
ros2_ws/src/lidar_detection/worlds/: lidar_test.world  test_room.world
