<?xml version="1.0"?>
<package format="3">
  <name>gazebo_turtlebot3</name>
  <version>0.1.0</version>
  <description>Custom Gazebo simulation package for modified TurtleBot3</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>

  <!-- Optional: robot_state_publisher, urdf, etc. -->
  <!-- <depend>robot_state_publisher</depend> -->
  <!-- <depend>urdf</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
